@@ -67,6 +67,10 @@ The distribution server URL, including the protocol. Defaults to
 "http://localhost/dist/". If "/dist" isn't appended to the end of the URL,
 F<bric_dist_mon> will append it for you.
 
+=item -t
+
+The distribution server request timeout, in seconds. Defaults to 30.
+
 =item -a
 
 IP Address from which the distribution requests will be sent to the
@@ -155,9 +159,9 @@ use constant URL => 'http://localhost/dist/';
 
 # Get the options.
 our ($opt_i, $opt_U, $opt_h, $opt_d, $opt_c, $opt_f, $opt_v, $opt_u, $opt_p,
-     $opt_a);
+     $opt_a, $opt_t);
 
-getopts('i:u:p:hdcvf:U:P:a:');
+getopts('i:u:p:hdcvf:U:P:a:t:');
 
 # Get the version number.
 use Bric; our $VERSION = Bric->VERSION;
@@ -263,8 +267,9 @@ sub send_jobs {
 
         # Create a client and load the Job IDs.
         my $client = Bric::Dist::Client->new({
-            url => $opt_U,
-            cookie => $cookie->as_string,
+            url     => $opt_U,
+            timeout => $opt_t || Bric::Dist::Client::DEFAULT_TIMEOUT,
+            cookie  => $cookie->as_string,
         });
 #        $client->load_ids;
 
@@ -342,6 +347,7 @@ Supported Options:
      Default is 30 seconds.
   -U The distribution server URL including the protocol. Defaults is
      'http://localhost/dist/'.
+  -t Request timeout, in seconds. Defaults to 30.
   -a IP Address from which the distribution requests will be sent to the
      distribution server. If not provided, $prog will do its best to figure
      out what the IP address is.
